--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,37 @@
-<p>
-  login works!
-</p>
+<ion-content class="login-background">
+  <div class="content-wrapper">
+    <div class="login-card">
+      <div class="branding">
+        <img src="assets/logo.svg" alt="Logo de la app" />
+        <h1>Indexer</h1>
+        <p>Las mejores ofertas en un solo lugar</p>
+      </div>
+
+      <form class="login-form">
+        <ion-item class="input-item">
+          <ion-input
+            type="email"
+            placeholder="Correo electrónico"
+          ></ion-input>
+        </ion-item>
+
+        <ion-item class="input-item">
+          <ion-input
+            type="password"
+            placeholder="Contraseña"
+          ></ion-input>
+        </ion-item>
+
+        <ion-button expand="block" [routerLink]="'/principal'" class="login-button">
+          Iniciar sesión
+        </ion-button>
+
+        <ion-text color="light">
+          <p class="registro-text">
+            ¿No tienes cuenta? <a routerLink="/registro">Regístrate</a>
+          </p>
+        </ion-text>
+      </form>
+    </div>
+  </div>
+</ion-content>
