Ventana de login con logo y fondo

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
   <div class="content-wrapper">
     <div class="login-card">
       <div class="branding">
-        <img src="assets/logo.svg" alt="Logo de la app" />
+        <img src="assets/indexer.png" alt="Logo de la app" />
         <h1>Indexer</h1>
         <p>Las mejores ofertas en un solo lugar</p>
       </div>
