--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,23 +7,39 @@
         <p>Las mejores ofertas en un solo lugar</p>
       </div>
 
-      <form class="login-form">
+
+      <form class="login-form" [formGroup]="loginForm" (ngSubmit)="login()">
         <ion-item class="input-item">
+
           <ion-input
-            type="email"
-            placeholder="Correo electrónico"
-          ></ion-input>
+            type="text"
+            placeholder="Usuario"
+            formControlName="username"
+            inputmode="text"
+            required>
+          </ion-input>
+
         </ion-item>
 
         <ion-item class="input-item">
+
           <ion-input
             type="password"
             placeholder="Contraseña"
-          ></ion-input>
+            formControlName="password"
+            required>
+          </ion-input>
+
         </ion-item>
 
-        <ion-button expand="block" [routerLink]="'/principal'" class="login-button">
-          Iniciar sesión
+
+        <ion-button
+          type="submit"
+          expand="block"
+          class="login-button"
+          [disabled]="loginForm.invalid || isLoading">
+          <ion-spinner *ngIf="isLoading" name="crescent" color="light"></ion-spinner>
+          <span *ngIf="!isLoading">Iniciar sesión</span>
         </ion-button>
 
         <ion-text color="light">
