--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<ion-content class="login-background">
+<ion-content class="login-background" *ngIf="!isRegistro">
   <div class="content-wrapper">
     <div class="login-card">
       <div class="branding">
@@ -28,7 +28,60 @@
 
         <ion-text color="light">
           <p class="registro-text">
-            ¿No tienes cuenta? <a routerLink="/registro">Regístrate</a>
+            ¿No tienes cuenta? <a (click)="cambioRegistro()">Regístrate</a>
+          </p>
+        </ion-text>
+      </form>
+    </div>
+  </div>
+</ion-content>
+
+<ion-content class="login-background" *ngIf="isRegistro">
+  <div class="content-wrapper">
+    <div class="login-card">
+      <div class="branding">
+        <img src="assets/indexer.png" alt="Logo de la app" />
+        <h1>Indexer</h1>
+        <p>Las mejores ofertas en un solo lugar</p>
+      </div>
+
+      <ion-item class="input-item">
+        <ion-input
+          type="name"
+          placeholder="Nombre de usuario"
+        ></ion-input>
+      </ion-item>
+
+      <ion-item class="input-ubi">
+        <ion-select name="pais" placeholder="Selecciona una provincia">
+          <ion-select-option *ngFor="let pais of paises" [value]="pais">
+            {{ pais }}
+          </ion-select-option>
+        </ion-select>
+      </ion-item>
+
+      <form class="login-form">
+        <ion-item class="input-item">
+          <ion-input
+            type="email"
+            placeholder="Correo electrónico"
+          ></ion-input>
+        </ion-item>
+
+        <ion-item class="input-item">
+          <ion-input
+            type="password"
+            placeholder="Contraseña"
+          ></ion-input>
+        </ion-item>
+
+        <ion-button expand="block" [routerLink]="'/principal'" class="login-button">
+          Registrarse
+        </ion-button>
+
+        <ion-text color="light">
+          <p class="registro-text">
+            ¿Ya tiene una cuenta? <a (click)="cambioRegistro()">Inicie sesión</a>
           </p>
         </ion-text>
       </form>
