--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -36,71 +36,71 @@
         <ion-button
           type="submit"
           expand="block"
-          class="login-button"
-          [disabled]="loginForm.invalid || isLoading">
-          <ion-spinner *ngIf="isLoading" name="crescent" color="light"></ion-spinner>
-          <span *ngIf="!isLoading">Iniciar sesión</span>
-        </ion-button>
+          class="login-button">
+        <!--[disabled]="loginForm.invalid || isLoading">-->
+        <ion-spinner *ngIf="isLoading" name="crescent"></ion-spinner>
+        <span *ngIf="!isLoading">Iniciar sesión</span>
+      </ion-button>
 
-        <ion-text color="light">
-          <p class="registro-text">
-            ¿No tienes cuenta? <a (click)="cambioRegistro()">Regístrate</a>
-          </p>
-        </ion-text>
-      </form>
-    </div>
+      <ion-text color="light">
+        <p class="registro-text">
+          ¿No tienes cuenta? <a (click)="cambioRegistro()">Regístrate</a>
+        </p>
+      </ion-text>
+    </form>
   </div>
+</div>
 </ion-content>
 
 <ion-content class="login-background" *ngIf="isRegistro">
-  <div class="content-wrapper">
-    <div class="login-card">
-      <div class="branding">
-        <img src="assets/indexer.png" alt="Logo de la app" />
-        <h1>Indexer</h1>
-        <p>Las mejores ofertas en un solo lugar</p>
-      </div>
+<div class="content-wrapper">
+  <div class="login-card">
+    <div class="branding">
+      <img src="assets/indexer.png" alt="Logo de la app" />
+      <h1>Indexer</h1>
+      <p>Las mejores ofertas en un solo lugar</p>
+    </div>
 
+    <ion-item class="input-item">
+      <ion-input
+        type="name"
+        placeholder="Nombre de usuario"
+      ></ion-input>
+    </ion-item>
+
+    <ion-item class="input-ubi">
+      <ion-select name="pais" placeholder="Selecciona una provincia">
+        <ion-select-option *ngFor="let pais of paises" [value]="pais">
+          {{ pais }}
+        </ion-select-option>
+      </ion-select>
+    </ion-item>
+
+    <form class="login-form">
       <ion-item class="input-item">
         <ion-input
-          type="name"
-          placeholder="Nombre de usuario"
+          type="email"
+          placeholder="Correo electrónico"
         ></ion-input>
       </ion-item>
 
-      <ion-item class="input-ubi">
-        <ion-select name="pais" placeholder="Selecciona una provincia">
-          <ion-select-option *ngFor="let pais of paises" [value]="pais">
-            {{ pais }}
-          </ion-select-option>
-        </ion-select>
+      <ion-item class="input-item">
+        <ion-input
+          type="password"
+          placeholder="Contraseña"
+        ></ion-input>
       </ion-item>
 
-      <form class="login-form">
-        <ion-item class="input-item">
-          <ion-input
-            type="email"
-            placeholder="Correo electrónico"
-          ></ion-input>
-        </ion-item>
+      <ion-button expand="block" [routerLink]="'/principal'" class="login-button">
+        Registrarse
+      </ion-button>
 
-        <ion-item class="input-item">
-          <ion-input
-            type="password"
-            placeholder="Contraseña"
-          ></ion-input>
-        </ion-item>
-
-        <ion-button expand="block" [routerLink]="'/principal'" class="login-button">
-          Registrarse
-        </ion-button>
-
-        <ion-text color="light">
-          <p class="registro-text">
-            ¿Ya tiene una cuenta? <a (click)="cambioRegistro()">Inicie sesión</a>
-          </p>
-        </ion-text>
-      </form>
-    </div>
+      <ion-text color="light">
+        <p class="registro-text">
+          ¿Ya tiene una cuenta? <a (click)="cambioRegistro()">Inicie sesión</a>
+        </p>
+      </ion-text>
+    </form>
   </div>
+</div>
 </ion-content>
