--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -1,11 +1,19 @@
 <ion-content class="login-background">
+  <div class="top-icons">
+    <button>
+      <ion-icon name="notifications-outline"></ion-icon>
+    </button>
+    <button>
+      <ion-icon name="person-circle-outline"></ion-icon>
+    </button>
+  </div>
+
   <div class="branding">
     <img src="assets/indexer.png" alt="Logo" />
     <h1>Ofertas destacadas</h1>
     <p>Explora los productos con descuentos</p>
   </div>
 
-  <!-- Contenedor para centrar la barra de búsqueda -->
   <div class="searchbar-container">
     <ion-searchbar placeholder="Buscar producto..." class="input-item"></ion-searchbar>
   </div>
