Menu izquierda, planteamiento

--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -17,6 +17,11 @@
   <div class="searchbar-container">
     <ion-searchbar placeholder="Buscar producto..." class="input-item"></ion-searchbar>
   </div>
+
+
+  <app-menuizquierda></app-menuizquierda>
+
+
   <ng-container *ngFor="let empresa of empresas">
     <h2 class="empresa-titulo">{{ empresa }}</h2>
   <div class="card-grid-horizontal">
