--- a/src/app/principal/principal.component.scss
+++ b/src/app/principal/principal.component.scss
@@ -5,6 +5,7 @@
   background-position: center;
   height: 100%;
   padding: 24px 16px;
+
 }
 
 .branding {
@@ -53,6 +54,7 @@
   overflow-x: auto;
   padding-bottom: 16px;
   scroll-snap-type: x mandatory;
+  margin-left: 25%;
 }
 
 .product-card {
@@ -158,6 +160,6 @@
   font-weight: bold;
   color: #4d4d4d;
   margin-bottom: 8px;
-  margin-left: 20px;
+  margin-left: 25%;
 }
 
