intentando hacer un scroll horizontal que funcione con las rueda del raton... pero si son solo 5 elementos por empresa no deberia de hacer falta.?

--- a/src/app/principal/principal.component.scss
+++ b/src/app/principal/principal.component.scss
@@ -55,7 +55,18 @@
   padding-bottom: 16px;
   scroll-snap-type: x mandatory;
   margin-left: 25%;
+  scroll-behavior: smooth; // opcional para animación suave
+  -webkit-overflow-scrolling: touch;
+
+  /* Ocultar la barra de scroll */
+  scrollbar-width: none;            /* Firefox */
+  -ms-overflow-style: none;         /* IE y Edge */
 }
+
+.card-grid-horizontal::-webkit-scrollbar {
+  display: none;                    /* Chrome, Safari y Opera */
+}
+
 
 .product-card {
   --background: #ffffff;
