--- a/src/app/menuizquierda/menuizquierda.component.html
+++ b/src/app/menuizquierda/menuizquierda.component.html
@@ -6,7 +6,7 @@
     <!-- Ordenar por -->
     <ion-label class="category-label">Ordenar por</ion-label>
     <ion-item>
-      <ion-select placeholder="Seleccionar">
+      <ion-select placeholder="Seleccionar" interface="popover" [(ngModel)]="sortBy">
         <ion-select-option value="precio-asc">Precio: Menor a mayor</ion-select-option>
         <ion-select-option value="precio-desc">Precio: Mayor a menor</ion-select-option>
         <ion-select-option value="popularidad">Popularidad</ion-select-option>
@@ -18,24 +18,23 @@
     <ion-label class="category-label">Precio entre (€)</ion-label>
     <div class="price-inputs">
       <ion-item class="compact-input">
-        <ion-input type="number" placeholder="Mín"></ion-input>
+        <ion-input type="number" placeholder="Mín" [(ngModel)]="minPrice"></ion-input>
       </ion-item>
       <ion-item class="compact-input">
-        <ion-input type="number" placeholder="Máx"></ion-input>
+        <ion-input type="number" placeholder="Máx" [(ngModel)]="maxPrice"></ion-input>
       </ion-item>
     </div>
-
 
     <!-- Categorías -->
     <ion-label class="category-label">Categorías</ion-label>
     <ion-list>
       <ion-item *ngFor="let categoria of categorias">
-        <ion-checkbox slot="start"></ion-checkbox>
+        <ion-checkbox slot="start" [(ngModel)]="selectedCategoriesMap[categoria]"></ion-checkbox>
         <ion-label>{{ categoria }}</ion-label>
       </ion-item>
     </ion-list>
 
-    <ion-button expand="block">Aplicar filtros</ion-button>
-    <ion-button>Restablecer</ion-button>
+    <ion-button expand="block" (click)="applyCurrentFilters()">Aplicar filtros</ion-button>
+    <ion-button expand="block" fill="outline" (click)="resetFilters()">Restablecer</ion-button>
   </ion-card-content>
 </ion-card>
