avance de admin con perfiles, ventana crear producto

--- a/src/app/paneladmin/paneladmin.component.html
+++ b/src/app/paneladmin/paneladmin.component.html
@@ -10,11 +10,43 @@
 
   <div class="branding">
     <img src="assets/indexer.png" alt="Logo" />
-    <h1>Ofertas destacadas</h1>
-    <p>Explora los productos con descuentos</p>
+    <h1>Panel Admin</h1>
+    <p>Bienvenido {{ perfil?.nombre }}</p>
   </div>
 
   <div class="searchbar-container">
-    <ion-searchbar placeholder="Buscar producto..." class="input-item"></ion-searchbar>
+    <ion-searchbar placeholder="Buscar usuario..." class="input-item"></ion-searchbar>
+    <ion-button [routerLink]="'/crearproducto'">Crear Producto</ion-button>
   </div>
+
+  <!-- tarjetas de todos los perfiles -->
+  <ion-grid class="perfil-grid">
+    <ion-row justify-content-center>
+      <ion-col size="2" size-sm="8" size-md="4" size-lg="2.4" *ngFor="let perfil of perfiles">
+        <ion-card class="product-card">
+          <img [src]="perfil.imagen" alt="Im  agen de {{ perfil.nombre }}" />
+          <ion-card-header>
+            <ion-card-title>{{ perfil.nombre }} {{ perfil.apellido }}</ion-card-title>
+            <ion-badge color="warning">
+              {{ perfil.baneado ? 'Baneado' : 'Activo' }}
+            </ion-badge>
+          </ion-card-header>
+          <ion-card-content>
+            <div class="rating">{{ perfil.ubicacion }}</div>
+            <ion-button expand="block" fill="outline" size="small" class="login-button">
+              Modificar
+            </ion-button>
+            <ion-button expand="block" fill="outline" size="small" color="danger" class="login-button">
+              Banear
+            </ion-button>
+            <ion-button expand="block" fill="outline" size="small" color="danger" class="login-button">
+              Eliminar
+            </ion-button>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+
 </ion-content>
