--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -23,9 +23,22 @@
   <ng-container *ngFor="let empresa of empresas">
     <h2 class="empresa-titulo">{{ empresa }}</h2>
 
-    <div class="card-grid-horizontal-wrapper">
-      <div class="card-grid-horizontal" #scrollArea>
-        <ion-card *ngFor="let producto of productos" class="product-card">
+    <swiper
+      [navigation]="true"
+      [pagination]="{ clickable: true }"
+      [loop]="false"
+      [slidesPerView]="5"
+      [slidesPerGroup]="1"
+      [spaceBetween]="2"
+      class="custom-swiper"
+    >
+
+
+    <ng-template
+        swiperSlide
+        *ngFor="let producto of productos"
+      >
+        <ion-card class="product-card">
           <img [src]="producto.image" alt="Imagen de {{ producto.title }}" />
           <ion-card-header>
             <ion-card-title>{{ producto.title }}</ion-card-title>
@@ -40,12 +53,21 @@
             </div>
             <div class="rating">⭐ {{ producto.rating }}</div>
             <div class="delivery">{{ producto.delivery }}</div>
-            <ion-button expand="block" fill="outline" size="small" [href]="producto.url" target="_blank" class="login-button">
+            <ion-button
+              expand="block"
+              fill="outline"
+              size="small"
+              [href]="producto.url"
+              target="_blank"
+              class="login-button"
+            >
               Ver más
             </ion-button>
           </ion-card-content>
         </ion-card>
-      </div>
-    </div>
+      </ng-template>
+    </swiper>
+
   </ng-container>
+
 </ion-content>
