--- a/src/app/menuizquierda/menuizquierda.component.html
+++ b/src/app/menuizquierda/menuizquierda.component.html
@@ -3,6 +3,13 @@
     <ion-card-title>Filtrar productos</ion-card-title>
   </ion-card-header>
   <ion-card-content>
+    <ion-label class="category-label">Tops</ion-label>
+    <ion-item lines="none">
+      <ion-button>Top 5</ion-button>
+      <ion-button>Top 15</ion-button>
+    </ion-item>
+
+
     <!-- Ordenar por -->
     <ion-label class="category-label">Ordenar por</ion-label>
     <ion-item>
