--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -4,7 +4,7 @@
       <ion-icon name="notifications-outline"></ion-icon>
     </button>
     <button>
-      <ion-icon name="person-circle-outline"></ion-icon>
+      <ion-icon name="person-circle-outline" [routerLink]="'/modificarperfil'"></ion-icon>
     </button>
   </div>
 
