modificar perfil "creacion"

--- a/src/app/paneladmin/paneladmin.component.html
+++ b/src/app/paneladmin/paneladmin.component.html
@@ -1,4 +1,4 @@
-<ion-content class="login-background">
+<ion-content class="background">
   <div class="top-icons">
     <button>
       <ion-icon name="notifications-outline"></ion-icon>
