--- a/src/app/principal/principal.component.scss
+++ b/src/app/principal/principal.component.scss
@@ -1,6 +1,4 @@
-
-
-.login-background {
+.background {
   --background: transparent;
   background: linear-gradient(to bottom, #ffffff, #ffb745);
   background-size: cover;
