--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,4 +1,4 @@
-.login-background {
+.background {
   --background: transparent;
   background: linear-gradient(to bottom, #ffffff, #ffb745);
   background-size: cover;
