--- a/src/app/paneladmin/paneladmin.component.scss
+++ b/src/app/paneladmin/paneladmin.component.scss
@@ -1,11 +1,10 @@
-.login-background {
+.background {
   --background: transparent;
   background: linear-gradient(to bottom, #ffffff, #ffb745);
   background-size: cover;
   background-position: center;
   height: 100%;
   padding: 24px 16px;
-
 }
 
 .branding {
