--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -52,7 +52,7 @@
 </div>
 </ion-content>
 
-<ion-content class="login-background" *ngIf="isRegistro">
+<ion-content class="background" *ngIf="isRegistro">
 <div class="content-wrapper">
   <div class="login-card">
     <div class="branding">
